--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
-<!DOCTYPE html>
 <style>
-  /* netnet default bg */
-  body {
-    margin: 0;
-    background-image: linear-gradient(#515199a8 2px, transparent 1px),
-      linear-gradient(90deg, #515199a8 2px, transparent 1px);
-    background-size: 50px 50px;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-  }
+  @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap");
 
-  body::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(0deg, #c76ebca8, #515199a8);
+  body {
+    background-color: #0082c8;
+    color: #ffffff;
+    font-size: 30px;
+    line-height: 30px;
+    word-wrap: anywhere;
+    font-family: "Noto Serif SC";
   }
 </style>
-    
+</style>
+
+<head>
+
+  <meta charset=”UTF-8″>
+
+  <meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
+
+  <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
+
+  <title>My Website [note]</title>
+
+</head>
+
+<body>
+
+</body>
+
+<script>
+  function coinToss() {
+    let chance = Math.random()
+    for i in
+      if (chance > 0.5) {
+        document.body.innerText += '<3'
+      } else {
+        document.body.innerText += ' <3 '
+      }
+    requestAnimationFrame(coinToss)
+  }
+
+  coinToss()
+</script>
