--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     font-family: "Noto Serif SC";
   }
 </style>
-</style>
 
 <head>
 
-  <meta charset=”UTF-8″>
+  <meta charset="UTF-8">
 
-  <meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>My Website [note]</title>
 
@@ -31,14 +30,12 @@
 <script>
   function coinToss() {
     let chance = Math.random()
-    for i in
       if (chance > 0.5) {
-        document.body.innerText += '<3'
+        document.body.innerText += '֎'
       } else {
-        document.body.innerText += ' <3 '
+        document.body.innerText += '∟'
       }
-    requestAnimationFrame(coinToss)
+      requestAnimationFrame(coinToss)
   }
-
   coinToss()
 </script>
